asteria/core/tests/errors/elaboration_errors/repeated_type_constructor_parameter.asteriacore
data Prod (a : Type) (a : Type) where
   | Pair (x : a) (y : a) : Test$Prod(a,a)
   ;;
